--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
-  <body>
+  <body class="body">
     <!-- Header -->
     <header>
       <nav>
         <a href="./index.html">
-          <p><span>Web</span>Studio</p>
+          <p><span class="logo">Web</span>Studio</p>
         </a>
         <ul>
-          <li><a href=""></a>Студия</li>
-          <li><a href=""></a>Портфолио</li>
-          <li><a href=""></a>Контакты</li>
+          <li class="header-element"><a href="">Студия</a></li>
+          <li class="header-element"><a href="portfolio.html">Портфолио</a></li>
+          <li class="header-element"><a href="">Контакты</a></li>
         </ul>
       </nav>
 
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -150,9 +155,9 @@
 
     <footer>
       <a href="./index.html">
-        <p><span>Web</span>Studio</p>
+        <p><span class="logo">Web</span>Studio</p>
       </a>
-      <a
+      <a class="footer-adress"
         href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
         target="_blank"
         rel="noopener noreferrer"
@@ -160,8 +165,8 @@
         г. Киев, пр-т Леси Украинки, 26</a
       >
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="footer-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="footer-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
