--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
     <header>
         <nav>
             <a href="./index.html">
-                <p><span class="logo">Web</span>Studio</p>
+                <div><span class="logo">Web</span>Studio</div>
             </a>
             <ul>
-                <li class="header-element"><a href=""></a>Студия</li>
-                <li class="header-element"><a href=""></a>Портфолио</li>
-                <li class="header-element"><a href=""></a>Контакты</li>
+                <li class="header-element"><a href="">Студия</a></li>
+                <li class="header-element"><a href="">Портфолио</a></li>
+                <li class="header-element"><a href="">Контакты</a></li>
             </ul>
         </nav>
     
@@ -34,12 +34,80 @@
 
     <!-- Section -->
 
+    <section> 
     <ul>
-        <li>Все</li>
+        <li><a href="">Все</a></li>
         <li><a href="">Веб-сайты</a></li>
         <li><a href="">Приложения</a></li>
         <li><a href="">Дизайн</a></li>
         <li><a href="">Маркетинг</a></li>
     </ul>
+    </section>
+
+    <!-- Section -->
+
+    <section>
+        <ul>
+            <li>
+                <img src="./images/portfolio/computer.jpg" alt="компьютер">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/basketball.jpg" alt="баскетбол">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/seafood.jpg" alt="рыба">
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/headphones.jpg" alt="наушники">
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/boxes.jpg" alt="бокс">
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/monitor.jpg" alt="монитор">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/journal.jpg" alt="журнал">
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/label.jpg" alt="лэйбл">
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/notebook.jpg" alt="ноутбук">
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Section -->
+
+    <footer>
+        <a href="./index.html">
+            <div><span class="logo">Web</span>Studio</div>
+        </a>
+        <a class="footer-adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
+            г. Киев, пр-т Леси Украинки, 26</a>
+        <ul>
+            <li class="footer-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
