--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a href="./index.html">
-          <p><span class="logo">Web</span>Studio</p>
+          <div><span class="logo">Web</span>Studio</div>
         </a>
         <ul>
           <li class="header-element"><a href="">Студия</a></li>
@@ -155,7 +155,7 @@
 
     <footer>
       <a href="./index.html">
-        <p><span class="logo">Web</span>Studio</p>
+        <div><span class="logo">Web</span>Studio</div>
       </a>
       <a class="footer-adress"
         href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
