--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
 
-  <body class="body">
+  <body>
     <!-- Header -->
     <header>
       <nav>
         <a href="./index.html">
-          <div><span class="logo">Web</span>Studio</div>
+          <div><span>Web</span>Studio</div>
         </a>
         <ul>
-          <li class="header-element"><a href="">Студия</a></li>
-          <li class="header-element"><a href="portfolio.html">Портфолио</a></li>
-          <li class="header-element"><a href="">Контакты</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
 
       <ul>
-        <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -155,18 +155,15 @@
 
     <footer>
       <a href="./index.html">
-        <div><span class="logo">Web</span>Studio</div>
+        <div><span>Web</span>Studio</div>
       </a>
-      <a class="footer-adress"
-        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
+      <a        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
         target="_blank"
-        rel="noopener noreferrer"
-      >
-        г. Киев, пр-т Леси Украинки, 26</a
-      >
+        rel="noopener noreferrer">
+        г. Киев, пр-т Леси Украинки, 26</a>
       <ul>
-        <li class="footer-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="footer-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
