--- a/portfolio.html
+++ b/portfolio.html
@@ -17,30 +17,33 @@
     <header>
         <nav>
             <a href="./index.html">
-                <div><span class="logo">Web</span>Studio</div>
+                <div><span>Web</span>Studio</div>
             </a>
             <ul>
-                <li class="header-element"><a href="">Студия</a></li>
-                <li class="header-element"><a href="">Портфолио</a></li>
-                <li class="header-element"><a href="">Контакты</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
     
         <ul>
-            <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+
+    <main>
 
     <!-- Section -->
 
     <section> 
+        <h1 hidden>Buttons</h1>
     <ul>
-        <li><a href="">Все</a></li>
-        <li><a href="">Веб-сайты</a></li>
-        <li><a href="">Приложения</a></li>
-        <li><a href="">Дизайн</a></li>
-        <li><a href="">Маркетинг</a></li>
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайты</button></li>
+        <li><button type="button">Приложения</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
     </ul>
     </section>
 
@@ -49,64 +52,66 @@
     <section>
         <ul>
             <li>
-                <img src="./images/portfolio/computer.jpg" alt="компьютер">
+                <a href=""><img src="./images/portfolio/computer.jpg" alt="компьютер"></a>
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/portfolio/basketball.jpg" alt="баскетбол">
+                <a href=""><img src="./images/portfolio/basketball.jpg" alt="баскетбол"></a>
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/portfolio/seafood.jpg" alt="рыба">
+                <a href=""><img src="./images/portfolio/seafood.jpg" alt="рыба"></a>
                 <h2>Ресторан Seafood</h2>
                 <p>Приложение</p>
             </li>
             <li>
-                <img src="./images/portfolio/headphones.jpg" alt="наушники">
+                <a href=""><img src="./images/portfolio/headphones.jpg" alt="наушники"></a>
                 <h2>Проект Prime</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/portfolio/boxes.jpg" alt="бокс">
+                <a href=""><img src="./images/portfolio/boxes.jpg" alt="бокс"></a>
                 <h2>Проект Boxes</h2>
                 <p>Приложение</p>
             </li>
             <li>
-                <img src="./images/portfolio/monitor.jpg" alt="монитор">
+                <a href=""><img src="./images/portfolio/monitor.jpg" alt="монитор"></a>
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/portfolio/journal.jpg" alt="журнал">
+                <a href=""><img src="./images/portfolio/journal.jpg" alt="журнал"></a>
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/portfolio/label.jpg" alt="лэйбл">
+                <a href=""><img src="./images/portfolio/label.jpg" alt="лэйбл"></a>
                 <h2>Проект LAB</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/portfolio/notebook.jpg" alt="ноутбук">
+                <a href=""><img src="./images/portfolio/notebook.jpg" alt="ноутбук"></a>
                 <h2>Growing Business</h2>
                 <p>Приложение</p>
             </li>
         </ul>
     </section>
 
+    </main>
+
     <!-- Section -->
 
     <footer>
         <a href="./index.html">
-            <div><span class="logo">Web</span>Studio</div>
+            <div><span>Web</span>Studio</div>
         </a>
-        <a class="footer-adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
+        <a href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
             г. Киев, пр-т Леси Украинки, 26</a>
         <ul>
-            <li class="footer-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </body>
