--- a/portfolio.html
+++ b/portfolio.html
@@ -16,19 +16,19 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="./index.html">
-                <div><span>Web</span>Studio</div>
+            <a class="logo" href="./index.html">
+                <div><span class="web">Web</span>Studio</div>
             </a>
             <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a class="nav-elements" href="./index.html">Студия</a></li>
+                <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="nav-elements" href="">Контакты</a></li>
             </ul>
         </nav>
     
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -52,47 +52,47 @@
     <section>
         <ul>
             <li>
-                <a href=""><img src="./images/portfolio/computer.jpg" alt="компьютер"></a>
+                <a href=""><img src="./images/portfolio/computer.jpg" alt="компьютер" width="370" height="294"></a>
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/basketball.jpg" alt="баскетбол"></a>
+                <a href=""><img src="./images/portfolio/basketball.jpg" alt="баскетбол" width="370" height="294"></a>
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/seafood.jpg" alt="рыба"></a>
+                <a href=""><img src="./images/portfolio/seafood.jpg" alt="рыба" width="370" height="294"></a>
                 <h2>Ресторан Seafood</h2>
                 <p>Приложение</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/headphones.jpg" alt="наушники"></a>
+                <a href=""><img src="./images/portfolio/headphones.jpg" alt="наушники" width="370" height="294"></a>
                 <h2>Проект Prime</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/boxes.jpg" alt="бокс"></a>
+                <a href=""><img src="./images/portfolio/boxes.jpg" alt="бокс" width="370" height="294"></a>
                 <h2>Проект Boxes</h2>
                 <p>Приложение</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/monitor.jpg" alt="монитор"></a>
+                <a href=""><img src="./images/portfolio/monitor.jpg" alt="монитор" width="370" height="294"></a>
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/journal.jpg" alt="журнал"></a>
+                <a href=""><img src="./images/portfolio/journal.jpg" alt="журнал" width="370" height="294"></a>
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/label.jpg" alt="лэйбл"></a>
+                <a href=""><img src="./images/portfolio/label.jpg" alt="лэйбл" width="370" height="294"></a>
                 <h2>Проект LAB</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <a href=""><img src="./images/portfolio/notebook.jpg" alt="ноутбук"></a>
+                <a href=""><img src="./images/portfolio/notebook.jpg" alt="ноутбук" width="370" height="294"></a>
                 <h2>Growing Business</h2>
                 <p>Приложение</p>
             </li>
@@ -104,14 +104,14 @@
     <!-- Section -->
 
     <footer>
-        <a href="./index.html">
-            <div><span>Web</span>Studio</div>
+        <a class="logo" href="./index.html">
+            <div><span class="web">Web</span>Studio</div>
         </a>
-        <a href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
+        <a class="adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
             г. Киев, пр-т Леси Украинки, 26</a>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </body>
