--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
@@ -16,27 +14,27 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html">
-          <div><span>Web</span>Studio</div>
+        <a class="logo" href="./index.html">
+          <div><span class="web">Web</span>Studio</div>
         </a>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="nav-elements" href="./index.html">Студия</a></li>
+          <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-elements" href="">Контакты</a></li>
         </ul>
       </nav>
 
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <!-- Hero -->
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-section">
+        <h1 class="theme">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!-- Main advantages -->
@@ -44,29 +42,29 @@
         <h2 hidden>Наши преимущества</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="advantages">Внимание к деталям</h3>
+            <p class="advantages-details">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="advantages">Пунктуальность</h3>
+            <p class="advantages-details">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="advantages">Планирование</h3>
+            <p class="advantages-details">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="advantages">Современные технологии</h3>
+            <p class="advantages-details">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -75,8 +73,8 @@
       </section>
 
       <section>
-        <!-- Чем мы занимаемся -->
-        <h2>Чем мы занимаемся</h2>
+        <!-- Our activity -->
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -107,7 +105,7 @@
 
       <section>
         <!-- Наша команда -->
-        <h2>Наша команда</h2>
+        <h2 class="title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -116,8 +114,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="name">Игорь Демьяненко</h3>
+            <p class="profession" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -126,8 +124,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="name">Ольга Репина</h3>
+            <p class="profession" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -136,8 +134,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="name">Николай Тарасов</h3>
+            <p class="profession" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -146,24 +144,24 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="name">Михаил Ермаков</h3>
+            <p class="profession" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html">
-        <div><span>Web</span>Studio</div>
+      <a class="logo" href="./index.html">
+        <div><span class="web">Web</span>Studio</div>
       </a>
-      <a        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
+      <a class="adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
         target="_blank"
         rel="noopener noreferrer">
         г. Киев, пр-т Леси Украинки, 26</a>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
