--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -25,8 +27,16 @@
       </nav>
 
       <ul>
-        <li><a class="contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact-header" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-header" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
@@ -155,13 +165,25 @@
       <a class="logo" href="./index.html">
         <div><span class="web">Web</span>Studio</div>
       </a>
-      <a class="adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
+      <a
+        class="adress"
+        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
         target="_blank"
-        rel="noopener noreferrer">
-        г. Киев, пр-т Леси Украинки, 26</a>
+        rel="noopener noreferrer"
+      >
+        г. Киев, пр-т Леси Украинки, 26</a
+      >
       <ul>
-        <li><a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact-footer" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-footer" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </footer>
   </body>
