--- a/portfolio.html
+++ b/portfolio.html
@@ -1,118 +1,196 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header>
-        <nav>
-            <a class="logo" href="./index.html">
-                <div><span class="web">Web</span>Studio</div>
-            </a>
-            <ul>
-                <li><a class="nav-elements" href="./index.html">Студия</a></li>
-                <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="nav-elements" href="">Контакты</a></li>
-            </ul>
-        </nav>
-    
+      <nav>
+        <a class="logo" href="./index.html">
+          <div><span class="web">Web</span>Studio</div>
+        </a>
         <ul>
-            <li><a class="contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a class="nav-elements" href="./index.html">Студия</a></li>
+          <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-elements" href="">Контакты</a></li>
         </ul>
+      </nav>
+
+      <ul>
+        <li>
+          <a class="contact-header" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-header" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
 
     <main>
+      <!-- Section -->
 
-    <!-- Section -->
-
-    <section> 
+      <section>
         <h1 hidden>Buttons</h1>
-    <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-    </ul>
-    </section>
-
-    <!-- Section -->
-
-    <section>
         <ul>
-            <li>
-                <a href=""><img src="./images/portfolio/computer.jpg" alt="компьютер" width="370" height="294"></a>
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/basketball.jpg" alt="баскетбол" width="370" height="294"></a>
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/seafood.jpg" alt="рыба" width="370" height="294"></a>
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/headphones.jpg" alt="наушники" width="370" height="294"></a>
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/boxes.jpg" alt="бокс" width="370" height="294"></a>
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/monitor.jpg" alt="монитор" width="370" height="294"></a>
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/journal.jpg" alt="журнал" width="370" height="294"></a>
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/label.jpg" alt="лэйбл" width="370" height="294"></a>
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/portfolio/notebook.jpg" alt="ноутбук" width="370" height="294"></a>
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
-            </li>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
         </ul>
-    </section>
+      </section>
 
+      <!-- Section -->
+
+      <section>
+        <ul>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/computer.jpg"
+                alt="компьютер"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/basketball.jpg"
+                alt="баскетбол"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/seafood.jpg"
+                alt="рыба"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/headphones.jpg"
+                alt="наушники"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/boxes.jpg"
+                alt="бокс"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/monitor.jpg"
+                alt="монитор"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/journal.jpg"
+                alt="журнал"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/label.jpg"
+                alt="лэйбл"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio/notebook.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+            /></a>
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Section -->
 
     <footer>
-        <a class="logo" href="./index.html">
-            <div><span class="web">Web</span>Studio</div>
-        </a>
-        <a class="adress" href="https://goo.gl/maps/cef3GvmBDTcJfVNKA" target="_blank" rel="noopener noreferrer">
-            г. Киев, пр-т Леси Украинки, 26</a>
-        <ul>
-            <li><a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+      <a class="logo" href="./index.html">
+        <div><span class="web">Web</span>Studio</div>
+      </a>
+      <a
+        class="adress"
+        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        г. Киев, пр-т Леси Украинки, 26</a
+      >
+      <ul>
+        <li>
+          <a class="contact-footer" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-footer" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
