--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,11 @@
       <section>
         <h1 hidden>Buttons</h1>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="project-button" type="button">Все</button></li>
+          <li><button class="project-button" type="button">Веб-сайты</button></li>
+          <li><button class="project-button" type="button">Приложения</button></li>
+          <li><button class="" type="button">Дизайн</button></li>
+          <li><button class="project-button" type="button">Маркетинг</button></li>
         </ul>
       </section>
 
@@ -70,8 +70,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Технокряк</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <a href=""
@@ -81,8 +81,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <a href=""
@@ -92,8 +92,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Ресторан Seafood</h2>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <a href=""
@@ -103,8 +103,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="project-name">Проект Prime</h2>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <a href=""
@@ -114,8 +114,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Проект Boxes</h2>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <a href=""
@@ -125,8 +125,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Inspiration has no Borders</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <a href=""
@@ -136,8 +136,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Издание Limited Edition</h2>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <a href=""
@@ -147,8 +147,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="project-name">Проект LAB</h2>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <a href=""
@@ -158,8 +158,8 @@
                 width="370"
                 height="294"
             /></a>
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Growing Business</h2>
+            <p class="project-type">Приложение</p>
           </li>
         </ul>
       </section>
