--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,7 @@
     <header>
       <nav>
         <a class="logo" href="./index.html">
-          <div><span class="web">Web</span>Studio</div>
-        </a>
+          <span class="web">Web</span>Studio</a>
         <ul>
           <li><a class="nav-elements" href="./index.html">Студия</a></li>
           <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
@@ -53,14 +52,10 @@
           <li><button class="project-button" type="button">Все</button></li>
           <li><button class="project-button" type="button">Веб-сайты</button></li>
           <li><button class="project-button" type="button">Приложения</button></li>
-          <li><button class="" type="button">Дизайн</button></li>
+          <li><button class="project-button" type="button">Дизайн</button></li>
           <li><button class="project-button" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-
-      <!-- Section -->
-
-      <section>
+      
         <ul>
           <li>
             <a href=""
@@ -168,17 +163,15 @@
     <!-- Section -->
 
     <footer>
-      <a class="logo" href="./index.html">
-        <div><span class="web">Web</span>Studio</div>
-      </a>
-      <a
+      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+      <div><a
         class="adress"
         href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
         target="_blank"
         rel="noopener noreferrer"
       >
         г. Киев, пр-т Леси Украинки, 26</a
-      >
+      > </div>
       <ul>
         <li>
           <a class="contact-footer" href="mailto:info@devstudio.com"
