--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
       <nav>
         <a class="logo" href="./index.html">
-          <div><span class="web">Web</span>Studio</div>
-        </a>
+          <span class="web">Web</span>Studio</a
+        >
         <ul>
           <li><a class="nav-elements" href="./index.html">Студия</a></li>
           <li><a class="nav-elements" href="./portfolio.html">Портфолио</a></li>
@@ -163,16 +163,19 @@
 
     <footer>
       <a class="logo" href="./index.html">
-        <div><span class="web">Web</span>Studio</div>
-      </a>
-      <a
-        class="adress"
-        href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
-        target="_blank"
-        rel="noopener noreferrer"
+        <span class="web">Web</span>Studio</a
       >
-        г. Киев, пр-т Леси Украинки, 26</a
-      >
+
+      <div>
+        <a
+          class="adress"
+          href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          г. Киев, пр-т Леси Украинки, 26</a
+        >
+      </div>
       <ul>
         <li>
           <a class="contact-footer" href="mailto:info@devstudio.com"
