--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </main>
 
     <footer>
-      <a class="logo" href="./index.html">
+      <a class="logo-footer" href="./index.html">
         <span class="web">Web</span>Studio</a
       >
 
