--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,7 @@
     <!-- Section -->
 
     <footer>
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html"><span class="web">Web</span>Studio</a>
       <div><a
         class="adress"
         href="https://goo.gl/maps/cef3GvmBDTcJfVNKA"
